# feedback-loop

./: .gitignore  DEVLOG.md  Makefile  README.md  install.bat  install.py  install.sh  uninstall.bat  uninstall.py  uninstall.sh  windsurf-ask-continue-1.1.0.vsix
.github/workflows/: ci.yml
.history/: README_20251225165836.md  README_20251227022927.md  README_20251227022934.md  README_20251227023147.md
apps/extension/: .vscodeignore  README.md  package-lock.json  package.json
apps/feedback-cli/: README.md  pyproject.toml
apps/feedback-cli/src/feedback/: __init__.py  __main__.py  collector.py  config.py
docs/architecture/: overview.md
docs/prompts/: README.md
extension/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
feedback/: README.md
mcp/: config.py  main.py  setup.py
mcp-server-python/: install_mcp_config.py  server.py
mcp/handlers/: http_handler.py  mcp_tools.py
mcp/models/: __init__.py  crud.py  database.py
mcp/utils/: __init__.py  discovery.py  response.py
prompts/: README.md
prompts/core/: io-protocol.md  terminal-feedback-protocol.md  最新windsurf无限延续对话，绕过mcp限制.md
rules/: example-windsurfrules.txt  global-dev-rules.md
scripts/: install.bat  install.py  install.sh  install_dev.py  install_helpers.py  install_user.py  quick_rename.py  release.sh  rename.py  test_options.py  uninstall.bat  uninstall.py  validate_protocol.py
server/: main.py  package-lock.json  package.json  requirements.txt  server.py  setup.py
server/models/: __init__.py  (+2 more)
vscode-extension/: README.md  package.json
(+50 files in other folders)
