[project]
name = "feedback"
version = "1.0.0"
description = "AI 交互式反馈工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
feedback = "feedback.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback"]

[tool.hatch.build.targets.sdist]
include = ["src/feedback"]
